crates/aranya-policy-compiler/tests/data/functions/return_type_struct_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
2 | function get_foo() struct Nonexistent {
  |                           ^^^^^^^^^^^ struct `Nonexistent` not defined
